<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_data">cherevkovanadezhda@yandex.ru</string>
    <string name="yandex_terms_of_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicum_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="no_search_results">Ничего не нашлось</string>
    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_search">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration_of_track">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track">track</string>
</resources>