<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <ImageView
            android:id="@+id/return_back"
            style="@style/SettingsImageStyle"
            android:layout_gravity="start"
            android:src="@drawable/return_back"
            app:tint="?attr/colorSecondary" />

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_marginVertical="0dp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="@dimen/margin_text"
            android:paddingTop="12dp"
            android:text="@string/settings"
            android:textSize="@dimen/header_text" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:checked="false"
            android:alpha="0.6"
            android:theme="@style/BrandedSwitch.control" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/share_application" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/write_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/write_support" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/terms_of_use" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/open_file" />
    </FrameLayout>
</LinearLayout>