<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/returnBackImageView"
            style="@style/SettingsImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:src="@drawable/return_back"
            app:tint="?attr/colorSecondary" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textSize="@dimen/header2_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginVertical="@dimen/light_margin_vertical"
        android:background="@drawable/search_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/medium_margin_vertical"
            android:layout_marginStart="@dimen/medium_icon_padding"
            android:layout_marginEnd="@dimen/regular_icon_padding"
            android:src="@drawable/search"
            app:tint="?attr/colorOnPrimaryContainer" />

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/search_background"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnPrimaryContainer"
            android:textSize="@dimen/medium_text" />

        <ImageView
            android:id="@+id/clearIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/medium_icon_padding"
            android:src="@drawable/clear"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimaryContainer" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_view" />

        <LinearLayout
            android:id="@+id/placeholderNoSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hard_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:src="@drawable/placeholder_no_search_results" />

            <TextView
                style="@style/SearchPlaceholderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_search_results" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholderServerError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/hard_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:src="@drawable/placeholder_server_error" />

            <TextView
                style="@style/SearchPlaceholderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_horizontal"
                android:text="@string/server_error" />

            <Button
                android:id="@+id/refreshSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/refresh_button_background"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/refresh_search"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/regular_text"
                app:backgroundTint="?attr/colorSecondary" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>