<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/medium_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/medium_margin" />

        <ImageView
            android:id="@+id/returnBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:src="@drawable/return_back"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorSecondary" />

        <ImageView
            android:id="@+id/trackCoverImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:src="@drawable/large_placeholder"
            app:layout_constraintBottom_toTopOf="@id/trackNameTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/border" />

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/light_margin"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/light_margin"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/header2_text"
            app:layout_constraintBottom_toTopOf="@id/artistNameTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackCoverImageView" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/light_margin"
            android:layout_marginTop="@dimen/regular_margin_vertical"
            android:layout_marginEnd="@dimen/light_margin"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/regular_text"
            app:layout_constraintBottom_toTopOf="@id/resumeButton"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackNameTextView" />

        <ImageView
            android:id="@+id/addToPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/light_margin"
            android:layout_marginTop="@dimen/hard_margin_vertical"
            android:src="@drawable/add_to_playlist_button"
            app:layout_constraintEnd_toStartOf="@id/resumeButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

        <ImageView
            android:id="@+id/resumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/resume_button"
            app:layout_constraintEnd_toStartOf="@id/likeTrackButton"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
            app:tint="?attr/colorSecondary" />

        <ImageView
            android:id="@+id/likeTrackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hard_margin_vertical"
            android:layout_marginEnd="@dimen/light_margin"
            android:src="@drawable/like_track_button"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/resumeButton"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

        <TextView
            android:id="@+id/trackTimePlayedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="0:30"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/regular_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resumeButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/trackTimeTextView"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium2_margin_vertical"
            android:text="@string/duration_of_track"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/collectionNameTextView"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackTimePlayedTextView"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/collectionNameTextView"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/releaseDateTextView"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackTimeTextView" />

        <TextView
            android:id="@+id/releaseDateTextView"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/primaryGenreNameTextView"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/collectionNameTextView" />

        <TextView
            android:id="@+id/primaryGenreNameTextView"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/primary_genre"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/countryTextView"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/releaseDateTextView" />

        <TextView
            android:id="@+id/countryTextView"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/country"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameTextView" />

        <TextView
            android:id="@+id/trackTimeValueTextView"
            style="@style/PlayerTrackInfoValuesTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium2_margin_vertical"
            android:gravity="end"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/collectionNameValueTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/trackTimePlayedTextView"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/collectionNameValueTextView"
            style="@style/PlayerTrackInfoValuesTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/releaseDateValueTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/trackTimeValueTextView" />

        <TextView
            android:id="@+id/releaseDateValueTextView"
            style="@style/PlayerTrackInfoValuesTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/primaryGenreNameValueTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/collectionNameValueTextView" />

        <TextView
            android:id="@+id/primaryGenreNameValueTextView"
            style="@style/PlayerTrackInfoValuesTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@id/countryValueTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/releaseDateValueTextView" />

        <TextView
            android:id="@+id/countryValueTextView"
            style="@style/PlayerTrackInfoValuesTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="end"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameValueTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>